# petcare

./: README.md  all.sh  build.sh  chat.py  start.sh
ros_ws/: AngstrongsdkLog.txt  README.md  build.sh  run_ascamera_node.sh
ros_ws/ascamera/launch/: ascamera.launch.py  hp60c.launch.py
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/ascamera/lib/ascamera/: ascamera_node
ros_ws/install/ascamera/share/ascamera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros_ws/log/: latest_build
ros_ws/src/camera_image_display/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/camera_image_display/camera_image_display/: camera_image_display.py  llm_auto_node.py  unified_llm_node.py  web_monitor.py  web_video_stream.py  yolov8.rknn
ros_ws/src/camera_image_display/camera_image_display/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/src/camera_image_display/camera_image_display/log/: latest_build
ros_ws/src/camera_image_display/camera_image_display/sth/: llm_auto_node.py  prompt.txt  unified_llm_node.py  wuhua
ros_ws/src/camera_image_display/camera_image_display/templates/: index.html
ros_ws/src/camera_image_display/msg/: DetectionInfo.msg
ros_ws/src/install/: local_setup.sh  setup.sh
ros_ws/src/log/: latest_build
sherpa-onnx-master1/sherpa-onnx-master/: llm_talk.py  say.sh
sherpa-onnx-master1/sherpa-onnx-master/sherpa-onnx copy/: Makefile  cmake_install.cmake
sherpa-onnx-master1/sherpa-onnx-master/sherpa-onnx copy/c-api/: Makefile  cmake_install.cmake
sherpa-onnx-master1/sherpa-onnx-master/sherpa-onnx copy/csrc/: Makefile  cmake_install.cmake
(+34 files in other folders)
